--- a/SFPzilla_VS/SFPzilla/SFPzilla.csproj
+++ b/SFPzilla_VS/SFPzilla/SFPzilla.csproj
@@ -170,6 +170,9 @@
     <None Include="Resources\server.png" />
     <None Include="Resources\coding.png" />
     <None Include="Resources\database.png" />
+    <None Include="Resources\layers2.png" />
+    <None Include="Resources\driver.bmp" />
+    <None Include="Resources\arduino.inf" />
     <Content Include="SFPzilla.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -183,6 +186,38 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <PublishFile Include="Be.Windows.Forms.HexBox">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>Assembly</FileType>
+    </PublishFile>
+    <PublishFile Include="ILMergeOrder.txt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="SFPzilla.ico">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
